tests-e2e/tests/snapshots/cli__compile_requires_input_or_package.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_required] · command line:1:1
  •
  │
  • the following required arguments were not provided:
  │   [INPUT]…
  │
  │ Usage: iris compile [FLAGS] [INPUT]…
  │
  │ For more information, try '--help'.
  │
  │   iris compile
  │   ╰───────────
  •
