tests-e2e/tests/snapshots/cli__config_conflicts_with_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [conflicting_flags] · command line:1:1
  •
  │
  • the argument '--config' cannot be used with '--config-file'
  │
  │ Usage: iris lsp [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --config {} --config-file missing.json
  │   ╰──────────────────────────────────────────────
  •
