tests-e2e/tests/snapshots/cli__config_duplicate_diagnostic_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:31
  •
  │
  • duplicate field `onSave`
  │
  │   {"diagnostics":{"onSave":null,"onSave":true}}
  │                                 ╰───────
  •
