tests-e2e/tests/snapshots/cli__config_duplicate_program_inline.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:48
  •
  │
  • duplicate field `program`
  │
  │   {"sources":{"kind":"command","program":"first","program":"second"}}
  │                                                  ╰────────
  •
