tests-e2e/tests/snapshots/cli__config_empty_json_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:1
  •
  │
  • EOF while parsing a value
  │
  │
  │   ╰
  •
